--- a/site/Coursera/module2/css/myCss.css
+++ b/site/Coursera/module2/css/myCss.css
@@ -1,14 +1,16 @@
-@media only screen and (max-width: 600px)
-@media only screen and (max-width: 768px)
-@media only screen and (max-width: 992px)
+@media only screen and (max-width: 600px){}
+@media only screen and (max-width: 768px){}
+@media only screen and (max-width: 992px){}
 
-
+body {font-family: Arial, Helvetica, sans-serif;}
 
 h1{ text-align:center; }
 h3{text-align: center;
 	
-	font-size: .5em;
+	font-size: 1.5vw;
 	font-weight:bold;
+	margin-top: 2px;
+	margin-bottom: 2px;
 
 	}
 
@@ -24,20 +26,26 @@ h3{text-align: center;
 	float: right;
 
 	border-color: black;
-	border-width: 10px;
-	width: 25%
-	margin:0 0 10px 0px;
+	border-width: 2px;
+	border-style: solid;
+	width: 25%;
+
 }
 
-.meunTitle1{background-color: pink}
-.meunTitle2{background-color: yellow}
-.meunTitle3{background-color: green}
+.menuTitle1{background-color: pink}
+.menuTitle2{background-color: yellow}
+.menuTitle3{background-color: green}
+
+
+.menuText{clear:right;}
+
 
 .col-lg-3 {
 
 	
-	border: 5px;
-	border-color: red;
+	border: 2px;
+	border-color: black	;
+	border-style: solid;
 	margin: 5px;
 	float:left;
 
