--- a/site/Coursera/module2/css/myCss.css
+++ b/site/Coursera/module2/css/myCss.css
@@ -1,6 +1,66 @@
-@media only screen and (max-width: 600px){}
-@media only screen and (max-width: 768px){}
-@media only screen and (max-width: 992px){}
+* {box-sizing: border-box;}
+
+@media only screen and   (max-width: 767px){
+
+	.col-sm-1 {
+
+		width: 100%
+		border: 2px;
+		border-color: black;
+		border-style: solid;
+		margin: 5px;
+		float:left;
+		background-color: gray;
+	}
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px){
+
+	.col-md-1{
+
+		width: 98%;
+		border: 2px;
+		border-color: black;
+		border-style: solid;
+		padding: 5px;
+		margin:1%;
+		float:left;
+		background-color: gray;
+	}	
+
+	.col-md-2{
+
+		width: 48%;
+		border: 2px;
+		border-color: black;
+		border-style: solid;
+		margin: 1%;
+		margin-bottom:10px;
+		float:left;
+		background-color: gray;
+
+
+	}
+
+
+}
+
+@media only screen and (min-width: 992px){
+
+	.col-lg-3 {
+
+	width: 30%;
+	border: 2px;
+	border-color: black;
+	border-style: solid;
+	margin: 1%;
+	float:left;
+	background-color: gray;
+
+	}
+
+}
 
 body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -41,30 +101,6 @@ h3{text-align: center;
 .menuText{clear:right;}
 
 
-.col-lg-3 {
 
-	
-	border: 2px;
-	border-color: black	;
-	border-style: solid;
-	margin: 5px;
-	float:left;
 
-}
 
-.col-lg-1{
-
-	width: 33%;
-}
-
-.col-lg-2{
-
-	width: 66%;
-
-}
-
-.col-lg-3{
-
-	width: 30%;
-	background-color: gray;
-}
